cluster-config/httpbin/httpbin.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps
